# Proiect-POO-Car-Auction-House

./: AuctionManager.cpp  AuctionManager.h  CMakeLists.txt  DataOra.cpp  DataOra.h  Derivate.cpp  Derivate.h  Exceptii.h  Licitatie.cpp  Licitatie.h  Microbuz.cpp  Microbuz.h  Participant.cpp  Participant.h  README.md  SpecificatiiTehnice.cpp  SpecificatiiTehnice.h  Templates.h  Vehicul.cpp  Vehicul.h  VehiculFactory.cpp  VehiculFactory.h  main.cpp
